--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class = "row">
           <div class="intro col-lg-7 col-md-12 col-sm-12">
               
-              <h2 class = "brand" href ="">Hello, it's me</h2>
+              <h2 class = "brand" href =""></h2>
             <h1 class = "big-heading">Nico Osgnach</h1>
             <p class = "intro">A UT CNS/CS admitted applicant, First-generation American-Italian, dual-passport-holder, STEM-focused student from a Texas public high school. 
               Passionate about AI, technology, sustainability, theater arts, a healthy lifestyle, and giving back to the community through volunteering, mentoring, and advocacy.</p>
