--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
       </div>
       <div class = "p-col col-lg-6 col-md-12" id = "contactMe">
         <h2 class = contact>Let's work together!</h2>
-        <p>If there's a project, website or anything involving my skills in computer science, theatre, or even both, feel free to contact me at <b>nicoosganch@entouch.net</b>. 
+        <p>If there's a project, website or anything involving my skills in computer science, theatre, or even both, feel free to contact me at <b>nicoosgnach@entouch.net</b>. 
           I'm available and will make time for any computer science projects, websites, or even theatre performances you may need.</p>
           <a class = "email" href="mailto:nicoosgnach@entouch.net">WRITE ME AN EMAIL     <i class="fa-solid fa-envelope"></i></a>
       </div>
