--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               
               <h2 class = "brand" href =""></h2>
             <h1 class = "big-heading">Nico Osgnach</h1>
-            <p class = "intro">A UT CNS/CS admitted applicant, First-generation American-Italian, dual-passport-holder, STEM-focused student from a Texas public high school. 
+            <p class = "intro">A second-year UT CNS/CS student, First-generation American-Italian, dual-passport-holder, STEM-focused student from a Texas public high school. 
               Passionate about AI, technology, sustainability, theater arts, a healthy lifestyle, and giving back to the community through volunteering, mentoring, and advocacy.</p>
             <p class = "SCROLL">SCROLL FOR MORE</p>
           </div>
@@ -91,6 +91,7 @@
         </div>
         <div class = "edu-caption col-lg-9">
           <p class = "edu-cat">University of Texas Austin</p>
+          <p class = "edu-caption"><strong>GPA:</strong> 3.80 (cumulative)</p>
           <p class = "edu-caption"><strong>Computer Science Entry-Level major;</strong> admitted and accepted the offer on February 2, 2023; admitted and accepted for Polymathic Scholars Honors on February 27, 2023</p>
           <p class = "edu-caption"><strong>Robotics and AI;</strong> Introductory Linux usage, C++ and Arduino programming for robot animation; Dr. Justin Heart</p>
         </div>
