--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               
               <h2 class = "brand" href =""></h2>
             <h1 class = "big-heading">Nico Osgnach</h1>
-            <p class = "intro">A second-year UT CNS/CS student, First-generation American-Italian, dual-passport-holder, STEM-focused student from a Texas public high school. 
+            <p class = "intro">A third-year UT CNS/CS student, First-generation American-Italian, dual-passport-holder, STEM-focused student from a Texas public high school. 
               Passionate about AI, technology, sustainability, theater arts, a healthy lifestyle, and giving back to the community through volunteering, mentoring, and advocacy.</p>
             <p class = "SCROLL">SCROLL FOR MORE</p>
           </div>
@@ -341,3 +341,4 @@
 </body>
 
 </html>
+
